# different

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  different.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  prek.yml
src/different_agent/: agents.py  cli.py  config.py  git_tools.py  github_tools.py  model.py  report.py
tests/: conftest.py  test_cli_helpers.py  test_cli_main.py  test_config.py  test_git_tools.py  test_github_tools.py  test_model.py  test_report.py  test_tooling_smoke.py
