[project]
name = "different-agent"
version = "0.1.0"
description = "Agentic tool to extract bug/vulnerability fixes from an inspiration repo and assess applicability to a target repo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.3.8",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
different-agent = "different_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
