[project]
name = "different-agent"
version = "0.1.0"
description = "Agentic tool to extract bug/vulnerability fixes from an inspiration repo and assess applicability to a target repo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.3.8",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
different-agent = "different_agent.cli:main"

[build-system]
requires = ["uv_build>=0.9.26"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.14.14",
    "ty>=0.0.13",
]
test = [
    "pytest>=9.0.2",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/different_agent/agents.py" = ["E501"]
"src/different_agent/report.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.11"
